# infrastructure/authorization-service/src/main/java/za/co/protogen/AuthorizationServiceApplication.java
@@ -1,0 +1,39 @@
+package za.co.protogen;
+
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.context.annotation.Bean;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.crypto.factory.PasswordEncoderFactories;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.provisioning.InMemoryUserDetailsManager;
+
+@SpringBootApplication
+public class AuthorizationServiceApplication {
+
+	public static void main(String[] args) {
+		SpringApplication.run(AuthorizationServiceApplication.class, args);
+	}
+
+	@Bean
+	public PasswordEncoder passwordEncoder() {
+		return PasswordEncoderFactories.createDelegatingPasswordEncoder();
+	}
+
+	@Bean
+	public InMemoryUserDetailsManager inMemoryUserDetailsManager(PasswordEncoder passwordEncoder) {
+		var user1 = User.builder()
+				.username("user1")
+				.password(passwordEncoder.encode("pw1"))
+				.roles("admin")
+				.build();
+
+		var user2 = User.builder()
+				.username("user2")
+				.password(passwordEncoder.encode("pw2"))
+				.roles("user")
+				.build();
+
+		return new InMemoryUserDetailsManager(user1, user2);
+	}
+}
